--- a/a-kategorija-cenovnik.html
+++ b/a-kategorija-cenovnik.html
@@ -102,7 +102,7 @@
               <div class="col-sm-4 p-2">
                 <div class="card card-sign2">
                   <div class="card-body">
-                    <div class="bg-dark rounded"><h5 class="card-title text-light text-center h3"><b><span class="sub-color">A, A1 I A2</span> KATEGORIJE</b></h5></div>
+                    <div class="bg-dark rounded"><h5 class="card-title text-light text-center h3"><b><span class="sub-color">A, A1 I A2</span> KATEGORIJA</b></h5></div>
                     <p class="card-text text-center"><b>Uslov:</b> Kandidat ima AM kategoriju</p>
                     <hr>
                     <p class="text-center h3"><b>45.000,00 RSD</b></p>
@@ -195,8 +195,7 @@
                       <p><b>Teorijski ispit: </b>5.000,00 RSD</p>
                       <p><b>Praktična obuka </b>12.000,00 RSD</p>
                       <p><b>Praktični ispit: </b>5.000,00 RSD</p>
-                      <p><b>Prva pomoć: </b>1.000,00 RSD</p>
-                      <p><b>Lekarski pregled </b>1.000,00 RSD</p>
+                      <p><b>Lekarski pregled </b>GRATIS</p>
                       <hr>
                       <div class="w-100 text-center">
                         <a href="" class="button-6 button-5 mt-1 mb-1 text-light">PRIJAVI SE</a>
@@ -234,10 +233,9 @@
                       <p class="text-center h3"><b>46.000,00 RSD</b></p>
                       <hr>
                       <p><b>Teorijska obuka </b>6.000,00 RSD</p>
-                      <p><b>Teorijski ispit: </b>1.000,00 RSD</p>
+                      <p><b>Teorijski ispit: </b>5.000,00 RSD</p>
                       <p><b>Praktična obuka </b>30.000,00 RSD</p>
-                      <p><b>Praktični ispit: </b>1.000,00 RSD</p>
-                
+                      <p><b>Praktični ispit: </b>5.000,00 RSD</p>
                       <p><b>Lekarski pregled </b>GRATIS</p>
                       <hr>
                       <div class="w-100 text-center">
@@ -292,7 +290,7 @@
                   <div class="card card-sign2">
                     <div class="card-body">
                       <div class="bg-dark rounded"><h5 class="card-title text-light text-center h3"><b><span class="sub-color">A2</span> KATEGORIJA</b></h5></div>
-                      <p class="card-text text-center"><b>Uslov:</b> Kandidat ima neku od kategorija:B, C, D, F, M:</p>
+                      <p class="card-text text-center"><b>Uslov:</b> Kandidat ima neku od kategorija: B, C, D, F, M:</p>
                       <hr>
                       <p class="text-center h3"><b>69.000,00 RSD</b></p>
                       <hr>
