--- a/a-kategorija-cenovnik.html
+++ b/a-kategorija-cenovnik.html
@@ -103,7 +103,7 @@
                 <div class="card card-sign2">
                   <div class="card-body">
                     <div class="bg-dark rounded"><h5 class="card-title text-light text-center h3"><b><span class="sub-color">A, A1 I A2</span> KATEGORIJA</b></h5></div>
-                    <p class="card-text text-center"><b>Uslov:</b> Kandidat ima AM kategoriju</p>
+                    <p class="card-text text-center p-height"><b>Uslov:</b> Kandidat ima AM kategoriju</p>
                     <hr>
                     <p class="text-center h3"><b>45.000,00 RSD</b></p>
                     <hr>
@@ -124,7 +124,7 @@
                   <div class="card card-sign2">
                     <div class="card-body">
                       <div class="bg-dark rounded"><h5 class="card-title text-light text-center h3"><b><span class="sub-color">A</span> KATEGORIJA</b></h5></div>
-                      <p class="card-text text-center"><b>Uslov:</b> Kandidat ne poseduje vozačku dozvolu</p>
+                      <p class="card-text text-center p-height"><b>Uslov:</b> Kandidat ne poseduje vozačku dozvolu</p>
                       <hr>
                       <p class="text-center h3"><b>98.000,00 RSD</b></p>
                       <hr>
@@ -145,7 +145,7 @@
                   <div class="card card-sign2">
                     <div class="card-body">
                       <div class="bg-dark rounded"><h5 class="card-title text-light text-center h3"><b><span class="sub-color">A</span> KATEGORIJA</b></h5></div>
-                      <p class="card-text text-center"><b>Uslov:</b> Kandidat poseduje B1, B, BE, C, D, F, M kategoriju</p>
+                      <p class="card-text text-center p-height"><b>Uslov:</b> Kandidat poseduje B1, B, BE, C, D, F, M kategoriju</p>
                       <hr>
                       <p class="text-center h3"><b>87.000,00 RSD</b></p>
                       <hr>
@@ -166,7 +166,7 @@
                   <div class="card card-sign2">
                     <div class="card-body">
                       <div class="bg-dark rounded"><h5 class="card-title text-light text-center h3"><b><span class="sub-color">A</span> KATEGORIJA</b></h5></div>
-                      <p class="card-text text-center"><b>Uslov:</b> Kandidat ima A1 kategoriju</p>
+                      <p class="card-text text-center p-height"><b>Uslov:</b> Kandidat ima A1 kategoriju</p>
                       <hr>
                       <p class="text-center h3"><b>36.000,00 RSD</b></p>
                       <hr>
@@ -187,7 +187,7 @@
                   <div class="card card-sign2">
                     <div class="card-body">
                       <div class="bg-dark rounded"><h5 class="card-title text-light text-center h3"><b><span class="sub-color">A</span> KATEGORIJA</b></h5></div>
-                      <p class="card-text text-center"><b>Uslov:</b> Kandidat ima A2 kategoriju</p>
+                      <p class="card-text text-center p-height"><b>Uslov:</b> Kandidat ima A2 kategoriju</p>
                       <hr>
                       <p class="text-center h3"><b>22.000,00 RSD</b></p>
                       <hr>
@@ -207,7 +207,7 @@
                   <div class="card card-sign2">
                     <div class="card-body">
                       <div class="bg-dark rounded"><h5 class="card-title text-light text-center h3"><b><span class="sub-color">A1</span> KATEGORIJA</b></h5></div>
-                      <p class="card-text text-center"><b>Uslov:</b> Kandidat ne poseduje vozačku dozvolu</p>
+                      <p class="card-text text-center p-height"><b>Uslov:</b> Kandidat ne poseduje vozačku dozvolu</p>
                       <hr>
                       <p class="text-center h3"><b>63.000,00 RSD</b></p>
                       <hr>
@@ -228,7 +228,7 @@
                   <div class="card card-sign2">
                     <div class="card-body">
                       <div class="bg-dark rounded"><h5 class="card-title text-light text-center h3"><b><span class="sub-color">A1</span> KATEGORIJA</b></h5></div>
-                      <p class="card-text text-center"><b>Uslov:</b> Kandidat ima neku od kategorija: B, C, D, F, M</p>
+                      <p class="card-text text-center p-height"><b>Uslov:</b> Kandidat ima neku od kategorija: B, C, D, F, M</p>
                       <hr>
                       <p class="text-center h3"><b>46.000,00 RSD</b></p>
                       <hr>
@@ -248,7 +248,7 @@
                   <div class="card card-sign2">
                     <div class="card-body">
                       <div class="bg-dark rounded"><h5 class="card-title text-light text-center h3"><b><span class="sub-color">A1</span> KATEGORIJA</b></h5></div>
-                      <p class="card-text text-center"><b>Uslov:</b> Kandidat ima AM kategoriju</p>
+                      <p class="card-text text-center p-height"><b>Uslov:</b> Kandidat ima AM kategoriju</p>
                       <hr>
                       <p class="text-center h3"><b>22.000,00 RSD</b></p>
                       <hr>
@@ -269,7 +269,7 @@
                   <div class="card card-sign2">
                     <div class="card-body">
                       <div class="bg-dark rounded"><h5 class="card-title text-light text-center h3"><b><span class="sub-color">A2</span> KATEGORIJA</b></h5></div>
-                      <p class="card-text text-center"><b>Uslov:</b> Kandidat ne poseduje vozačku dozvolu</p>
+                      <p class="card-text text-center p-height"><b>Uslov:</b> Kandidat ne poseduje vozačku dozvolu</p>
                       <hr>
                       <p class="text-center h3"><b>80.000,00 RSD</b></p>
                       <hr>
@@ -290,7 +290,7 @@
                   <div class="card card-sign2">
                     <div class="card-body">
                       <div class="bg-dark rounded"><h5 class="card-title text-light text-center h3"><b><span class="sub-color">A2</span> KATEGORIJA</b></h5></div>
-                      <p class="card-text text-center"><b>Uslov:</b> Kandidat ima neku od kategorija: B, C, D, F, M:</p>
+                      <p class="card-text text-center p-height"><b>Uslov:</b> Kandidat ima neku od kategorija: B, C, D, F, M:</p>
                       <hr>
                       <p class="text-center h3"><b>69.000,00 RSD</b></p>
                       <hr>
@@ -311,7 +311,7 @@
                   <div class="card card-sign2">
                     <div class="card-body">
                       <div class="bg-dark rounded"><h5 class="card-title text-light text-center h3"><b><span class="sub-color">A2</span> KATEGORIJA</b></h5></div>
-                      <p class="card-text text-center"><b>Uslov:</b> Kandidat ima AM kategoriju</p>
+                      <p class="card-text text-center p-height"><b>Uslov:</b> Kandidat ima AM kategoriju</p>
                       <hr>
                       <p class="text-center h3"><b>33.000,00 RSD</b></p>
                       <hr>
@@ -332,7 +332,7 @@
                   <div class="card card-sign2">
                     <div class="card-body">
                       <div class="bg-dark rounded"><h5 class="card-title text-light text-center h3"><b><span class="sub-color">A2</span> KATEGORIJA</b></h5></div>
-                      <p class="card-text text-center"><b>Uslov:</b> Kandidat ima A1 kategoriju</p>
+                      <p class="card-text text-center p-height"><b>Uslov:</b> Kandidat ima A1 kategoriju</p>
                       <hr>
                       <p class="text-center h3"><b>23.000,00 RSD</b></p>
                       <hr>
