--- a/b-kategorija.html
+++ b/b-kategorija.html
@@ -96,7 +96,17 @@
 
     <div class="bg-light mt-5 mb-5">
         <div class="container">
-            <h2 class="h1 francois-one-regular">B Kategorija</h2>
+            <div class="row">
+                <div class="scene scene--card">
+                    <div class="cardflip">
+                      <div class="card__face card__face--front">
+                        <div class="rounded-circle car-circle bg-dark"><i class="bi bi-car-front-fill sub-color"></i></div>
+                        <h2 class="h1 francois-one-regular mt-5 text-dark">B Kategorija</h2>
+                      </div>
+                      <div class="card__face card__face--back">back</div>
+                    </div>
+                  </div>
+            </div>
             <div class="row">
                 <p>Uslovi za upisivanje i polaganje B kategorije:</p>
                 <p>Kandidat može da se upiše u auto školu ukoliko ima minimum 16 godina</p>
@@ -253,6 +263,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="assets/js/flipcard.js"></script>
     <script src="assets/js/main.js"></script>
   </body>
   </html>
