--- a/b-kategorija.html
+++ b/b-kategorija.html
@@ -97,15 +97,66 @@
     <div class="bg-light mt-5 mb-5">
         <div class="container">
             <div class="row">
-                <div class="scene scene--card">
-                    <div class="cardflip">
-                      <div class="card__face card__face--front">
-                        <div class="rounded-circle car-circle bg-dark"><i class="bi bi-car-front-fill sub-color"></i></div>
-                        <h2 class="h1 francois-one-regular mt-5 text-dark">B Kategorija</h2>
-                      </div>
-                      <div class="card__face card__face--back">back</div>
+                <div class="col-lg-3 col-md-6 col-sm-12 p-2">
+                    <div class="scene scene--card">
+                        <div class="cardflip">
+                            <div class="card__face card__face--front">
+                            <div class="rounded-circle car-circle bg-dark"><i class="bi bi-car-front-fill sub-color"></i></div>
+                            <h2 class="h1 francois-one-regular mt-5 text-dark">B Kategorija</h2>
+                            <p class="text-dark">Uslovi za upisivanje i polaganje</p>
+                            <p class="text-dark">Kako izgleda obuka?</p>
+                            <p class="text-dark">Probna vizacka dozvola</p>
+                            <p class="text-dark">Ograničenja</p>
+                            </div>
+                            <div class="card__face card__face--back">back</div>
+                        </div>
                     </div>
-                  </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 p-2">
+                    <div class="scene scene--card">
+                        <div class="cardflip">
+                            <div class="card__face card__face--front">
+                            <div class="rounded-circle car-circle bg-dark"><i class="bi bi-car-front-fill sub-color"></i></div>
+                            <h2 class="h1 francois-one-regular mt-5 text-dark">B Kategorija</h2>
+                            <p class="text-dark">Uslovi za upisivanje i polaganje</p>
+                            <p class="text-dark">Kako izgleda obuka?</p>
+                            <p class="text-dark">Probna vizacka dozvola</p>
+                            <p class="text-dark">Ograničenja</p>
+                            </div>
+                            <div class="card__face card__face--back">back</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 p-2">
+                    <div class="scene scene--card">
+                        <div class="cardflip">
+                            <div class="card__face card__face--front">
+                            <div class="rounded-circle car-circle bg-dark"><i class="bi bi-car-front-fill sub-color"></i></div>
+                            <h2 class="h1 francois-one-regular mt-5 text-dark">B Kategorija</h2>
+                            <p class="text-dark">Uslovi za upisivanje i polaganje</p>
+                            <p class="text-dark">Kako izgleda obuka?</p>
+                            <p class="text-dark">Probna vizacka dozvola</p>
+                            <p class="text-dark">Ograničenja</p>
+                            </div>
+                            <div class="card__face card__face--back">back</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 p-2">
+                    <div class="scene scene--card">
+                        <div class="cardflip">
+                            <div class="card__face card__face--front">
+                            <div class="rounded-circle car-circle bg-dark"><i class="bi bi-car-front-fill sub-color"></i></div>
+                            <h2 class="h1 francois-one-regular mt-5 text-dark">B Kategorija</h2>
+                            <p class="text-dark">Uslovi za upisivanje i polaganje</p>
+                            <p class="text-dark">Kako izgleda obuka?</p>
+                            <p class="text-dark">Probna vizacka dozvola</p>
+                            <p class="text-dark">Ograničenja</p>
+                            </div>
+                            <div class="card__face card__face--back">back</div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="row">
                 <p>Uslovi za upisivanje i polaganje B kategorije:</p>
