--- a/b-kategorija.html
+++ b/b-kategorija.html
@@ -102,11 +102,11 @@
                         <div class="cardflip">
                             <div class="card__face card__face--front">
                             <div class="rounded-circle car-circle bg-dark"><i class="bi bi-car-front-fill sub-color"></i></div>
-                            <h2 class="h1 francois-one-regular mt-5 text-dark">B Kategorija</h2>
-                            <p class="text-dark">Uslovi za upisivanje i polaganje</p>
-                            <p class="text-dark">Kako izgleda obuka?</p>
-                            <p class="text-dark">Probna vizacka dozvola</p>
-                            <p class="text-dark">Ograničenja</p>
+                            <h2 class="h2 francois-one-regular mt-6 text-light">Uslovi za upis</h2>
+                            <p class="text-light">Uslovi za upisivanje i polaganje</p>
+                            <p class="text-light">Kako izgleda obuka?</p>
+                            <p class="text-light">Probna vizacka dozvola</p>
+                            <p class="text-light">Ograničenja</p>
                             </div>
                             <div class="card__face card__face--back">back</div>
                         </div>
@@ -117,11 +117,11 @@
                         <div class="cardflip">
                             <div class="card__face card__face--front">
                             <div class="rounded-circle car-circle bg-dark"><i class="bi bi-car-front-fill sub-color"></i></div>
-                            <h2 class="h1 francois-one-regular mt-5 text-dark">B Kategorija</h2>
-                            <p class="text-dark">Uslovi za upisivanje i polaganje</p>
-                            <p class="text-dark">Kako izgleda obuka?</p>
-                            <p class="text-dark">Probna vizacka dozvola</p>
-                            <p class="text-dark">Ograničenja</p>
+                            <h2 class="h2 francois-one-regular mt-6 text-light">Uslovi za upis</h2>
+                            <p class="text-light">Uslovi za upisivanje i polaganje</p>
+                            <p class="text-light">Kako izgleda obuka?</p>
+                            <p class="text-light">Probna vizacka dozvola</p>
+                            <p class="text-light">Ograničenja</p>
                             </div>
                             <div class="card__face card__face--back">back</div>
                         </div>
@@ -132,11 +132,11 @@
                         <div class="cardflip">
                             <div class="card__face card__face--front">
                             <div class="rounded-circle car-circle bg-dark"><i class="bi bi-car-front-fill sub-color"></i></div>
-                            <h2 class="h1 francois-one-regular mt-5 text-dark">B Kategorija</h2>
-                            <p class="text-dark">Uslovi za upisivanje i polaganje</p>
-                            <p class="text-dark">Kako izgleda obuka?</p>
-                            <p class="text-dark">Probna vizacka dozvola</p>
-                            <p class="text-dark">Ograničenja</p>
+                            <h2 class="h2 francois-one-regular mt-6 text-light">Uslovi za upis</h2>
+                            <p class="text-light">Uslovi za upisivanje i polaganje</p>
+                            <p class="text-light">Kako izgleda obuka?</p>
+                            <p class="text-light">Probna vizacka dozvola</p>
+                            <p class="text-light">Ograničenja</p>
                             </div>
                             <div class="card__face card__face--back">back</div>
                         </div>
@@ -147,11 +147,11 @@
                         <div class="cardflip">
                             <div class="card__face card__face--front">
                             <div class="rounded-circle car-circle bg-dark"><i class="bi bi-car-front-fill sub-color"></i></div>
-                            <h2 class="h1 francois-one-regular mt-5 text-dark">B Kategorija</h2>
-                            <p class="text-dark">Uslovi za upisivanje i polaganje</p>
-                            <p class="text-dark">Kako izgleda obuka?</p>
-                            <p class="text-dark">Probna vizacka dozvola</p>
-                            <p class="text-dark">Ograničenja</p>
+                            <h2 class="h2 francois-one-regular mt-6 text-light">Uslovi za upis</h2>
+                            <p class="text-light">Uslovi za upisivanje i polaganje</p>
+                            <p class="text-light">Kako izgleda obuka?</p>
+                            <p class="text-light">Probna vizacka dozvola</p>
+                            <p class="text-light">Ograničenja</p>
                             </div>
                             <div class="card__face card__face--back">back</div>
                         </div>
