--- a/b-kategorija.html
+++ b/b-kategorija.html
@@ -107,6 +107,7 @@
                             <p class="text-light">Kako izgleda obuka?</p>
                             <p class="text-light">Probna vizacka dozvola</p>
                             <p class="text-light">Ograničenja</p>
+                            <p class="mt-6 h1"><i class="bi bi-arrow-repeat"></i></p>
                             </div>
                             <div class="card__face card__face--back">back</div>
                         </div>
@@ -122,6 +123,7 @@
                             <p class="text-light">Kako izgleda obuka?</p>
                             <p class="text-light">Probna vizacka dozvola</p>
                             <p class="text-light">Ograničenja</p>
+                            <p class="mt-6 h1"><i class="bi bi-arrow-repeat"></i></p>
                             </div>
                             <div class="card__face card__face--back">back</div>
                         </div>
@@ -137,6 +139,7 @@
                             <p class="text-light">Kako izgleda obuka?</p>
                             <p class="text-light">Probna vizacka dozvola</p>
                             <p class="text-light">Ograničenja</p>
+                            <p class="mt-6 h1"><i class="bi bi-arrow-repeat"></i></p>
                             </div>
                             <div class="card__face card__face--back">back</div>
                         </div>
@@ -152,6 +155,7 @@
                             <p class="text-light">Kako izgleda obuka?</p>
                             <p class="text-light">Probna vizacka dozvola</p>
                             <p class="text-light">Ograničenja</p>
+                            <p class="mt-6 h1"><i class="bi bi-arrow-repeat"></i></p>
                             </div>
                             <div class="card__face card__face--back">back</div>
                         </div>
