--- a/b-kategorija.html
+++ b/b-kategorija.html
@@ -14,6 +14,28 @@
     <link rel="icon" type="image/x-icon" href="/assets/img/biz_logo.svg">
 </head>
 <body>
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Kako izgleda obuka?</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>Zatim usleđuje praktična obuka u trajanju od 40 časova, gde je kandidatu dozvoljeno da ima maksimalno dva časa vožnje dnevno.</p>
+
+                <p>Nakon završene praktične obuke, kandidat se prijavljuje za polaganje praktičnog dela ispita.</p>
+
+                <p>Na praktičnom ispitu se nalazi ispitna komisija koju čine dva ispitivača, jedan je ispitivač MUP-a, a drugi je ispitivač iz auto skole, koji ocenjuju da li je kandidat ispunio sve uslove za polaganje ispita, kako na pologonu, tako i u gradskoj vožnji. Potrebno je da kandidat dobije ocenu POLOŽIO od oba lica kako bi se smatralo da je položio ispit, u suprotnom kandidat po pravilniku dobija konačnu ocenu NIJE POLOŽIO.</p>
+            </div>
+            <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Izađi</button>
+            </div>
+        </div>
+        </div>
+    </div>
+
     <a href="javascript:" id="return-to-top"><i class="icon-chevron-up"></i></a>
       <!-- Topbar Start -->
       <div class="container-fluid bg-primary d-none d-lg-block">
@@ -102,11 +124,7 @@
                         <div class="cardflip">
                             <div class="card__face card__face--front">
                             <div class="rounded-circle car-circle bg-dark"><i class="bi bi-car-front-fill sub-color"></i></div>
-                            <h2 class="h2 francois-one-regular mt-6 text-light">Uslovi za upis</h2>
-                            <p class="text-light">Uslovi za upisivanje i polaganje</p>
-                            <p class="text-light">Kako izgleda obuka?</p>
-                            <p class="text-light">Probna vizacka dozvola</p>
-                            <p class="text-light">Ograničenja</p>
+                            <h2 class="h2 francois-one-regular d-flex justify-content-center vh50 align-items-center text-light">Uslovi za upis</h2>
                             <p class="card-rotate-sign h1"><i class="bi bi-arrow-repeat"></i></p>
                             </div>
                             <div class="card__face card__face--back text-align p-2"><p><i class="bi bi-dot"></i>Kandidat može da se upiše u auto školu ukoliko ima minimum 16 godina</p>
@@ -129,18 +147,22 @@
                         <div class="cardflip">
                             <div class="card__face card__face--front">
                             <div class="rounded-circle car-circle bg-dark"><i class="bi bi-car-front-fill sub-color"></i></div>
-                            <h2 class="h2 francois-one-regular mt-6 text-light">Kako izgleda obuka?</h2>
-                            <p class="text-light">Uslovi za upisivanje i polaganje</p>
-                            <p class="text-light">Kako izgleda obuka?</p>
-                            <p class="text-light">Probna vizacka dozvola</p>
-                            <p class="text-light">Ograničenja</p>
+                            <h2 class="h2 francois-one-regular d-flex justify-content-center vh50 align-items-center text-light">Kako izgleda obuka?</h2>
                             <p class="h1 card-rotate-sign"><i class="bi bi-arrow-repeat"></i></p>
                             </div>
-                            <div class="card__face card__face--back">back</div>
+                            <div class="card__face card__face--back text-align p-2">
+                                <p><i class="bi bi-dot"></i>Obuka kandidata bez iskustva počinje teorisjkom nastavom u trajanju od 40 časova i kandidat može slušati maksimalno 3 časa teorijske obuke dnevno, pri čemu je trajanje jednog časa 45 minuta. Okvirno vreme završetka teorisjke obuke jeste dve i po nedelje i kandidat mora biti prisutan na svim časovima teorijske nastave.</p>
+
+                                <p><i class="bi bi-dot"></i>Nakon završetka teorisjke nastave, kandidat se prijavljuje za polaganje teorisjkog ispita. Teorijski deo ispita je u vidu testa na računarima. Da bi kandidat položio test, potrebno je da ima 85% tačnih odgovora, odnosno 85 i više poena od ukupnih 100.</p>
+
+                                <p><i class="bi bi-dot"></i>Nakon položenog teorisjkog dela potrebno je da kandidat izvadi lekarsko uverenjem koje mu naša auto škola obezbeđuje gratis.</p>
+
+                                <div class="w-100 text-center"><button type="button" class="button-6 mt-3" data-bs-toggle="modal" data-bs-target="#exampleModal">Prikaži više</button></div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-12 p-2">
+                <div class="col-md-6 col-sm-12 p-2">
                     <div class="scene scene--card">
                         <div class="cardflip">
                             <div class="card__face card__face--front">
@@ -156,7 +178,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-12 p-2">
+                <div class="col-md-6 col-sm-12 p-2">
                     <div class="scene scene--card">
                         <div class="cardflip">
                             <div class="card__face card__face--front">
