--- a/b-kategorija.html
+++ b/b-kategorija.html
@@ -14,28 +14,6 @@
     <link rel="icon" type="image/x-icon" href="/assets/img/biz_logo.svg">
 </head>
 <body>
-    <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Kako izgleda obuka?</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <p>Zatim usleđuje praktična obuka u trajanju od 40 časova, gde je kandidatu dozvoljeno da ima maksimalno dva časa vožnje dnevno.</p>
-
-                <p>Nakon završene praktične obuke, kandidat se prijavljuje za polaganje praktičnog dela ispita.</p>
-
-                <p>Na praktičnom ispitu se nalazi ispitna komisija koju čine dva ispitivača, jedan je ispitivač MUP-a, a drugi je ispitivač iz auto skole, koji ocenjuju da li je kandidat ispunio sve uslove za polaganje ispita, kako na pologonu, tako i u gradskoj vožnji. Potrebno je da kandidat dobije ocenu POLOŽIO od oba lica kako bi se smatralo da je položio ispit, u suprotnom kandidat po pravilniku dobija konačnu ocenu NIJE POLOŽIO.</p>
-            </div>
-            <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Izađi</button>
-            </div>
-        </div>
-        </div>
-    </div>
-
     <a href="javascript:" id="return-to-top"><i class="icon-chevron-up"></i></a>
       <!-- Topbar Start -->
       <div class="container-fluid bg-primary d-none d-lg-block">
@@ -157,7 +135,11 @@
 
                                 <p><i class="bi bi-dot"></i>Nakon položenog teorisjkog dela potrebno je da kandidat izvadi lekarsko uverenjem koje mu naša auto škola obezbeđuje gratis.</p>
 
-                                <div class="w-100 text-center"><button type="button" class="button-6 mt-3" data-bs-toggle="modal" data-bs-target="#exampleModal">Prikaži više</button></div>
+                                <p><i class="bi bi-dot"></i>Zatim usleđuje praktična obuka u trajanju od 40 časova, gde je kandidatu dozvoljeno da ima maksimalno dva časa vožnje dnevno.</p>
+                            
+                                <p><i class="bi bi-dot"></i>Nakon završene praktične obuke, kandidat se prijavljuje za polaganje praktičnog dela ispita.</p>
+                            
+                                <p><i class="bi bi-dot"></i>Na praktičnom ispitu se nalazi ispitna komisija koju čine dva ispitivača, jedan je ispitivač MUP-a, a drugi je ispitivač iz auto skole, koji ocenjuju da li je kandidat ispunio sve uslove za polaganje ispita, kako na pologonu, tako i u gradskoj vožnji. Potrebno je da kandidat dobije ocenu POLOŽIO od oba lica kako bi se smatralo da je položio ispit, u suprotnom kandidat po pravilniku dobija konačnu ocenu NIJE POLOŽIO.</p>
                             </div>
                         </div>
                     </div>
