--- a/b-kategorija.html
+++ b/b-kategorija.html
@@ -149,7 +149,7 @@
                         <div class="cardflip">
                             <div class="card__face card__face--front">
                             <div class="rounded-circle car-circle bg-dark"><i class="bi bi-car-front-fill sub-color"></i></div>
-                            <h2 class="h2 francois-one-regular d-flex justify-content-center vh50 align-items-center text-light">Dobijanje probne vozačke dozvole:</h2>
+                            <h2 class="h2 francois-one-regular d-flex justify-content-center vh50 align-items-center text-light">Probna vozačka dozvola</h2>
                             <p class="h1 card-rotate-sign"><i class="bi bi-arrow-repeat"></i></p>
                             </div>
                             <div class="card__face card__face--back text-align p-3 style-4">
@@ -165,7 +165,7 @@
                         <div class="cardflip">
                             <div class="card__face card__face--front">
                             <div class="rounded-circle car-circle bg-dark"><i class="bi bi-car-front-fill sub-color"></i></div>
-                            <h2 class="h2 francois-one-regular d-flex justify-content-center vh50 align-items-center text-light">Privremena vozačka dozvola i ograničenja:</h2>
+                            <h2 class="h2 francois-one-regular d-flex justify-content-center vh50 align-items-center text-light">Ograničenja</h2>
                             <p class="h1 card-rotate-sign"><i class="bi bi-arrow-repeat"></i></p>
                             </div>
                             <div class="card__face card__face--back text-align p-3 style-4">
