--- a/b-kategorija.html
+++ b/b-kategorija.html
@@ -165,10 +165,10 @@
                         <div class="cardflip">
                             <div class="card__face card__face--front">
                             <div class="rounded-circle car-circle bg-dark"><i class="bi bi-car-front-fill sub-color"></i></div>
-                            <h2 class="h2 francois-one-regular d-flex justify-content-center vh50 align-items-center text-light">Ograničenja sa probnom vozačkom dozvolom</h2>
+                            <h2 class="h2 francois-one-regular d-flex justify-content-center vh50 align-items-center text-light">Ograničenja sa probnom<br> vozačkom dozvolom</h2>
                             <p class="h1 card-rotate-sign"><i class="bi bi-arrow-repeat"></i></p>
                             </div>
-                            <div class="card__face card__face--back text-align p-3 style-4">
+                            <div class="card__face card__face--back text-align p-3 px-5 style-4">
                                 <p><i class="bi bi-dot"></i>Vozač sa probnom vozačkom dozvolom B kategorije nema dozvolu da vozi vozilo od 23:00 do 06:00 sati.</p>
                                 <p><i class="bi bi-dot"></i>Zabranjena je upotreba mobilnih telefona i drugih uređaja za komunikaciju tokom vožnje automobila.</p>
                                 <p><i class="bi bi-dot"></i>Osoba koja vozi sa probnom vozačkom dozvolom ne sme biti pod uticajem alkohola.</p>
