--- a/b-kategorija.html
+++ b/b-kategorija.html
@@ -105,7 +105,7 @@
                             <h2 class="h2 francois-one-regular d-flex justify-content-center vh50 align-items-center text-light">Uslovi za upis</h2>
                             <p class="card-rotate-sign h1"><i class="bi bi-arrow-repeat"></i></p>
                             </div>
-                            <div class="card__face card__face--back text-align p-3 style-4"><p><i class="bi bi-dot"></i>Kandidat može da se upiše u auto školu ukoliko ima minimum 16 godina</p>
+                            <div class="card__face card__face--back text-align p-3 px-5 style-4"><p><i class="bi bi-dot"></i>Kandidat može da se upiše u auto školu ukoliko ima minimum 16 godina</p>
 
                                 <p><i class="bi bi-dot"></i>Za polaganje praktičnog dela ispita i dobijanje vozačke dozvole neophodno da kandidat ima napunjenih 17 godina.</p>
                                 
@@ -128,7 +128,7 @@
                             <h2 class="h2 francois-one-regular d-flex justify-content-center vh50 align-items-center text-light">Kako izgleda obuka?</h2>
                             <p class="h1 card-rotate-sign"><i class="bi bi-arrow-repeat"></i></p>
                             </div>
-                            <div class="card__face card__face--back text-align p-3 style-4">
+                            <div class="card__face card__face--back text-align p-3 px-5 style-4">
                                 <p><i class="bi bi-dot"></i>Obuka kandidata bez iskustva počinje teorisjkom nastavom u trajanju od 40 časova i kandidat može slušati maksimalno 3 časa teorijske obuke dnevno, pri čemu je trajanje jednog časa 45 minuta. Okvirno vreme završetka teorisjke obuke jeste dve i po nedelje i kandidat mora biti prisutan na svim časovima teorijske nastave.</p>
 
                                 <p><i class="bi bi-dot"></i>Nakon završetka teorisjke nastave, kandidat se prijavljuje za polaganje teorisjkog ispita. Teorijski deo ispita je u vidu testa na računarima. Da bi kandidat položio test, potrebno je da ima 85% tačnih odgovora, odnosno 85 i više poena od ukupnih 100.</p>
@@ -152,7 +152,7 @@
                             <h2 class="h2 francois-one-regular d-flex justify-content-center vh50 align-items-center text-light">Probna vozačka dozvola</h2>
                             <p class="h1 card-rotate-sign"><i class="bi bi-arrow-repeat"></i></p>
                             </div>
-                            <div class="card__face card__face--back text-align p-3 style-4">
+                            <div class="card__face card__face--back text-align p-3 px-5 style-4">
                                 <p><i class="bi bi-dot"></i>Kandidati koji su ispunili uslov da sa 17 godina izađu na praktični ispit, nakon položenog vozačkog ispita dobijaju probnu vozačku dozvolu do navršene 21. godine života.</p>
 
                                 <p><i class="bi bi-dot"></i>U slučaju kandidata koji su položili vozački ispit sa navršenih 19 godina života, dobijaju probnu vozačka dozvola u trajanju od 2 godine.</p>
